--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"ts-results": "^3.3.0",
+		"tslib": "^2.8.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
