--- a/app/package.json
+++ b/app/package.json
@@ -53,7 +53,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
-		"vitest": "^3.2.3"
+		"vitest": "^3.2.3",
+		"winston": "^3.17.0",
+		"winston-loki": "^6.1.3"
 	},
 	"dependencies": {
 		"drizzle-orm": "^0.40.0",
